[tool.poetry]
name = "LangserveTest1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
rag-conversation = {path = "packages\\rag-conversation", develop = true}
pirate-speak = {path = "packages\\pirate-speak", develop = true}
neo4j-vector-memory = {path = "packages\\neo4j-vector-memory", develop = true}
openai-functions-agent = {path = "packages\\openai-functions-agent", develop = true}


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
